fixed create task button font weight

--- a/style/add_task.css
+++ b/style/add_task.css
@@ -154,6 +154,7 @@ textarea.task-input {
 .create-button {
     background-color: #2A3647;
     color: white;
+    font-weight: 700;
 }
 
 .create-task :hover {
