--- a/style/board_overlay_style.css
+++ b/style/board_overlay_style.css
@@ -90,7 +90,7 @@
     flex-direction: column;
 }
 
-.overlay_content .show_seperator{
+.overlay_content .show_separator{
     flex-direction: row;
 }
 
@@ -143,7 +143,7 @@
     gap:8px
 }
 
-.overlay_content .edit_overlay_button_container .seperator_overlay{
+.overlay_content .edit_overlay_button_container .separator_overlay{
     border-right: 1px solid #A8A8A8;
 }
 
@@ -283,21 +283,21 @@
     display: unset;
 }
 
-.overlay_seperator_add_task{
+.overlay_separator_add_task{
     width: 1px;
     background-color: #D1D1D1;
     margin: 0px 5%;
     visibility: hidden;
 }
 
-.overlay_seperator_add_task.show{
+.overlay_separator_add_task.show{
     visibility: visible;
     opacity: 1;
     transition-delay: 0s;
 }
 
 .overlay_content .action-button-section{
-    margin-top: 12px
+    margin-top: 12px;
 }
 
 .overlay_content .action-button-section .required-text,
