edit images centered

--- a/style/add_task.css
+++ b/style/add_task.css
@@ -417,5 +417,11 @@ textarea.task-input {
 .subtask-edit-section {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 4px;
+}
+
+.subtask-edit-section img {
+    height: 16px;
+    cursor: pointer;
 }
