--- a/style/add_task.css
+++ b/style/add_task.css
@@ -442,3 +442,9 @@ textarea.task-input {
     justify-content: center;
     align-items: center;
 }
+
+.subtask-edit-seperator {
+    width: 1px;
+    background-color: #D1D1D1;
+    height: 100%;
+}
