--- a/style/add_task.css
+++ b/style/add_task.css
@@ -430,10 +430,16 @@ textarea.task-input {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
+    background-color: #F6F7F8;
 }
 
 .subtask-edit input {
     flex: 1;
+    border: none;
+    box-shadow: none;
+    outline: none;
+    font-family: "Inter";
+    font-size: 16px;
 }
 
 .subtask-edit-buttons {
