--- a/style/add_task.css
+++ b/style/add_task.css
@@ -441,6 +441,7 @@ textarea.task-input {
     outline: none;
     font-family: "Inter";
     font-size: 16px;
+    padding: 4px;
 }
 
 .subtask-edit-buttons {
@@ -448,6 +449,7 @@ textarea.task-input {
     gap: 8px;
     justify-content: center;
     align-items: center;
+    margin-right: 8px;
 }
 
 .subtask-edit-seperator {
