--- a/style/board_style.css
+++ b/style/board_style.css
@@ -165,6 +165,7 @@ h1{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    margin-bottom: 16px;
 }
 
 .single_task_content .category{
