--- a/style/contacts.css
+++ b/style/contacts.css
@@ -50,7 +50,7 @@
     padding: 17px 36px;
 }
 
-.single-letter-section { 
+.single-letter-section {
     align-self: stretch;
 }
 
@@ -131,7 +131,7 @@
     gap: 8px;
 }
 
-.font-size-16{
+.font-size-16 {
     font-weight: 400;
     font-size: 16px;
 }
@@ -190,7 +190,45 @@
     font-size: 20px;
 }
 
-.single-User{
+.single-User {
     display: flex;
     gap: 35px;
+}
+
+#editUser:hover {
+    font-family: "Inter_bold";
+    color: #29ABE2;
+}
+
+#deleteUser:hover {
+    font-family: "Inter_bold";
+    color: #29ABE2;
+}
+
+#editUser::before {
+    content: "";
+    width: 24px;
+    height: 24px;
+    background: url("../assets/icons/contacts/edit.svg") center / contain no-repeat;
+}
+
+#deleteUser::before {
+    content: "";
+    width: 24px;
+    height: 24px;
+    background: url("../assets/icons/contacts/delete.svg") center / contain no-repeat;
+}
+
+#deleteUser:hover::before {
+    content: "";
+    width: 24px;
+    height: 24px;
+    background: url("../assets/icons/board/delete_button_hover.svg") center / contain no-repeat;
+}
+
+#editUser:hover::before {
+    content: "";
+    width: 24px;
+    height: 24px;
+    background: url("../assets/icons/board/edit_button_hover.svg") center / contain no-repeat;
 }
