fix: removed empty div container in html
feat: started responsiv structure

--- a/style/contacts.css
+++ b/style/contacts.css
@@ -232,3 +232,26 @@
     height: 24px;
     background: url("../assets/icons/board/edit_button_hover.svg") center / contain no-repeat;
 }
+
+@media (max-width: 767px) {
+    .contact-display {
+        display: none;
+    }
+
+    .sidebar-contacts {
+        width: 100%;
+    }
+
+    .add-contact-btn {
+        
+       padding: 0;
+        border-radius: 50px;
+        width: 32px;
+        height: 32px;
+        font-size: 0;
+        align-items: center;
+        align-content: center;
+    }
+
+
+}
