--- a/style/contacts.css
+++ b/style/contacts.css
@@ -33,7 +33,7 @@
     display: flex;
     align-items: center;
     margin-top: 20px;
-    padding: 8px 80px !important;
+    padding: 8px 80px ;
     margin-right: auto;
     margin-left: auto;
     gap: 10px;
