--- a/style/contacts.css
+++ b/style/contacts.css
@@ -33,7 +33,7 @@
     display: flex;
     align-items: center;
     margin-top: 20px;
-    padding: 8px 80px ;
+    padding: 8px 80px;
     margin-right: auto;
     margin-left: auto;
     gap: 10px;
@@ -48,7 +48,7 @@
     top: 0px;
 }
 
-.add-contact-btn:hover{
+.add-contact-btn:hover {
     background-color: #29ABE2;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -113,7 +113,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: orange;
+    background-color: #D9D9D9;
     border: 3px solid #FFFFFF;
     color: white;
     border-radius: 70px;
@@ -248,4 +248,6 @@
     height: 24px;
     background: url("../assets/icons/board/edit_button_hover.svg") center / contain no-repeat;
 }
+
+
 
