--- a/style/contact_responsive.css
+++ b/style/contact_responsive.css
@@ -67,6 +67,9 @@
         border-bottom-left-radius: 0;
         padding-left: 4%;
         padding-right: 4%;
+    }
+
+    .main-left-edit-dialog{
 
     }
 
@@ -77,6 +80,10 @@
         min-width: 0;
         padding-left: 4%;
         padding-right: 4%;
+    }
+
+    .create-contact-btn {
+        margin-top: 12px;
     }
 
     .position {
@@ -96,6 +103,8 @@
 
     .add-contact-info {
         min-width: 0;
+        margin-top: 80px;
+        gap: 28px;
 
     }
 
@@ -133,7 +142,5 @@
         height: 100px;
     }
 
-    .add-contact-info{
-        margin-top: 80px;
-    }
+    
 }
