--- a/style/contact_responsive.css
+++ b/style/contact_responsive.css
@@ -150,10 +150,6 @@
         height: 100px;
     }
 
-    .main-name-btns {
-        display: none;
-    }
-
     .contact-header-text {
         flex-direction: column;
         align-items: flex-start;
@@ -173,10 +169,7 @@
     }
 
     .main-name {
-
         gap: 20px;
-
-
         margin-left: 0px;
     }
 
@@ -192,6 +185,26 @@
     .go-back-btn {
         display: flex;
         margin-left: 80%;
+    }
+
+    .sub-menu-btn {
+        display: flex;
+    }
+
+    .main-name-btns {
+        position: absolute;
+        bottom: 90px;
+        right: 4px;
+        flex-direction: column;
+        background-color: white;
+        border-radius: 20px 20px 0px 20px;
+        width: 90px;
+        height: auto;
+        padding: 10px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, .2);
+        z-index: 1;
+        transform: translateX(200%);
+        transition: transform 1s ease-in-out;
     }
 }
 
