--- a/style/contacts.css
+++ b/style/contacts.css
@@ -5,7 +5,7 @@
     height: 100%;
 }
 
-.d-none{
+.d-none {
     display: none;
 }
 
@@ -48,13 +48,13 @@
     background-color: #2A3647;
     border: none;
     border-radius: 10px;
-    
+
 }
 
 .add-contact-btn-position {
     position: sticky;
     top: 0px;
-    
+
 }
 
 .add-contact-btn:hover {
@@ -260,17 +260,34 @@
     background: url("../assets/icons/board/edit_button_hover.svg") center / contain no-repeat;
 }
 
-.go-back-btn{
+.go-back-btn {
     display: none;
     border: none;
     background-color: transparent;
     cursor: pointer;
     padding-bottom: 70px;
-    
-    
 }
 
-.contact-header-text{
+.contact-header-text {
     display: flex;
     align-items: center;
 }
+
+.sub-menu-btn {
+    display: none;
+    position: absolute;
+    border-radius: 50%;
+    font-size: 0;
+    padding: 10px;
+    background-color: #2A3647;
+    border: none;
+    cursor: pointer;
+    bottom: 100px;
+    right: 2%;
+}
+
+.sub-menu-btn:hover {
+    background-color: #29ABE2;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
