fixed styling error on "create task" button

--- a/style/add_task_responsive.css
+++ b/style/add_task_responsive.css
@@ -12,6 +12,18 @@
     }
 }
 
+@media (max-width: 900px) {
+    .action-button-section {
+        flex-direction: column;
+        gap: 12px;
+    }
+
+    .button-section {
+        justify-content: flex-end;
+        margin-bottom: 16px;
+    }
+}
+
 @media (max-width: 767px) {
 
     .show-767 {
