--- a/style/add_task_responsive.css
+++ b/style/add_task_responsive.css
@@ -58,6 +58,10 @@
         font-size: 16px;
         padding: 12px 4px;
     }
+
+    .h1 {
+        font-size: 50px;
+    }
 }
 
 @media (max-width: 380px) {
