--- a/style/contact_responsive.css
+++ b/style/contact_responsive.css
@@ -16,6 +16,7 @@
         display: flex;
         flex-direction: column-reverse;
         max-height: 100vh;
+        min-width: 320px;
     }
 
     .add-contact-btn-position {
@@ -184,46 +185,27 @@
 
     .go-back-btn {
         display: flex;
-        margin-left: 80%;
-    }
-
-    .sub-menu-btn {
-        display: flex;
     }
 
     .main-name-btns {
-        position: absolute;
-        bottom: 90px;
-        right: 4px;
-        flex-direction: column;
-        background-color: white;
-        border-radius: 20px 20px 0px 20px;
-        width: 90px;
-        height: auto;
-        padding: 10px;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, .2);
-        z-index: 1;
-        transform: translateX(200%);
-        transition: transform 1s ease-in-out;
+        display: none;
     }
+
 }
 
 @media (max-width: 596px) {
     .two-letter-name {
-        width: 60px;
-        height: 60px;
+        width: 55px;
+        height: 55px;
     }
-
-    .go-back-btn {
-
-        margin-left: 66%;
-    }
-
 }
 
-@media (max-width: 476px) {
-    .go-back-btn {
-        margin-left: 23%;
+@media (max-width: 400px) {
+    .main-name {
+        gap: 10px;
     }
 
+    .fullname {
+        font-size: 23px;
+    }
 }
