--- a/style/contacts.css
+++ b/style/contacts.css
@@ -12,7 +12,7 @@
     overflow-y: auto;
     background: #FFFFFF;
     box-shadow: 4px 0px 6px rgba(0, 0, 0, 0.08);
-    width: 33%;
+    min-width: 450px;
     z-index: 20;
     height: calc(100vh - 96px);
 }
@@ -47,7 +47,6 @@
     background-color: #2A3647;
     border: none;
     border-radius: 10px;
-
 }
 
 .add-contact-btn-position {
@@ -79,7 +78,7 @@
 }
 
 .contact-display {
-    width: 66%;
+    width: 100%;
     margin-left: 80px;
     margin-top: 110px;
 }
@@ -290,3 +289,15 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.sub-menu-btns {
+    flex-direction: column;
+    background-color: white;
+    border-radius: 20px 20px 0px 20px;
+    width: 90px;
+    height: auto;
+    padding: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, .2);
+    z-index: 1;
+    transform: translateX(200%);
+    transition: transform 1s ease-in-out;
+}
