--- a/style/contacts/add_contact.css
+++ b/style/contacts/add_contact.css
@@ -79,21 +79,21 @@ dialog[open] {
    content: "";
    min-width: 24px;
    width: 24px;
-   background: url("../assets/icons/contacts/person.svg") center / contain no-repeat;
+   background: url("../../assets/icons/contacts/person.svg") center / contain no-repeat;
 }
 
 .mail::after {
    content: "";
    min-width: 24px;
    width: 24px;
-   background: url("../assets/icons/contacts/mail.svg") center / contain no-repeat;
+   background: url("../../assets/icons/contacts/mail.svg") center / contain no-repeat;
 }
 
 .phone::after {
    content: "";
    min-width: 24px;
    width: 24px;
-   background: url("../assets/icons/contacts/call.svg") center / contain no-repeat;
+   background: url("../../assets/icons/contacts/call.svg") center / contain no-repeat;
 }
 
 .add-contact-info {
@@ -128,17 +128,29 @@ dialog[open] {
    gap: 16px;
 }
 
+.dialog-window-message {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    border: none;
+}
+
 .dialog-message {
-   position: absolute;
+   position: sticky;
+   top: 800px;
+   left: 750px;
+   height: 10px; 
+   align-items: center;
    background-color: #2A3647;
    border: none;
+   display: flex;
    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
    border-radius: 20px;
    padding: 20px;
-   transform: translateX(400%);
+   transform: translateX(590%);
    transition: transform 1.2s ease-in-out;
-   top: 760px;
-   left: 750px;
 }
 
 .dialog-message.show {
@@ -154,14 +166,14 @@ dialog[open] {
    content: "";
    width: 24px;
    height: 24px;
-   background: url("../assets/icons/contacts/close.svg") center / contain no-repeat;
+   background: url("../../assets/icons/contacts/close.svg") center / contain no-repeat;
 }
 
 .cancel-add-btn :hover::after {
    content: "";
    width: 24px;
    height: 24px;
-   background: url("../assets/icons/contacts/close_hover.svg") center / contain no-repeat;
+   background: url("../../assets/icons/contacts/close_hover.svg") center / contain no-repeat;
 }
 
 .cancel-add-btn :hover {
