feat: added sub menu to edit and delete a user when in responsiv view - included sub menu dialog in window onclick function - added css for sub menu
refactor: adjusted values in resp css sheet

--- a/style/contacts/contact_responsive.css
+++ b/style/contacts/contact_responsive.css
@@ -191,6 +191,15 @@
         display: none;
     }
 
+    .sub-header-information {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    .sub-menu-btn {
+        display: flex;
+    }
+
 }
 
 @media (max-width: 596px) {
