--- a/style/contacts/contacts.css
+++ b/style/contacts/contacts.css
@@ -290,6 +290,9 @@
 }
 
 .sub-menu-btns {
+    position: absolute;
+    bottom: 130px;
+    right: 5%;
     flex-direction: column;
     background-color: white;
     border-radius: 20px 20px 0px 20px;
@@ -302,3 +305,6 @@
     transition: transform 1s ease-in-out;
 }
 
+.sub-menu-btns.show {
+    transform: translateX(0);
+}
