--- a/style/board_style.css
+++ b/style/board_style.css
@@ -7,9 +7,9 @@
 
 .board_menu{
     display: flex;
-    height: 232px;
+    height: 152px;
     justify-content: space-between;
-    align-items: center;
+    padding-top: 80px;
     font-family: "Inter_bold";
 }
 
@@ -257,22 +257,20 @@ h1{
     width: 17px;
 }
 
-.message_overflow{
-    box-sizing: border-box;
-    transform: translateX(200%);
-    transition: opacity 0.5s ease-in-out, transform 0.3s ease-in-out;
-    opacity: 0;
-
-    position: absolute;
-    background-color: #2A3647;
-    border: none;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 20px;
-    padding: 20px;
-
+.no_task_found_message{
+    font-size: 16px;
+    font-weight: 400;
+    color: #ff3d00;
+    font-family: "Inter";
+    display: block;
 }
 
-.message_overflow.show {
-    opacity: 1;
-    transform: translateX(0);
+.board_controls_container{
+    display: flex;
+    flex-direction: column;
+    gap:8px;
+}
+
+.d-none{
+    display: none;
 }
