--- a/style/contacts/contacts.css
+++ b/style/contacts/contacts.css
@@ -4,10 +4,6 @@
     height: 100%;
 }
 
-.d-none {
-    display: none;
-}
-
 .sidebar-contacts {
     overflow-y: auto;
     background: #FFFFFF;
@@ -15,6 +11,7 @@
     min-width: 450px;
     z-index: 20;
     height: calc(100vh - 96px);
+    flex-direction: column;
 }
 
 .contact-list {
@@ -35,7 +32,7 @@
 .add-contact-btn {
     display: flex;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 12px;
     padding: 8px 80px;
     margin-right: auto;
     margin-left: auto;
