--- a/style/contacts/contacts.css
+++ b/style/contacts/contacts.css
@@ -5,13 +5,15 @@
 }
 
 .sidebar-contacts {
+    display: flex;
     overflow-y: auto;
     background: #FFFFFF;
     box-shadow: 4px 0px 6px rgba(0, 0, 0, 0.08);
-    min-width: 450px;
+    min-width: 390px;
     z-index: 20;
     height: calc(100vh - 96px);
     flex-direction: column;
+    padding: 0 2% 0 2%;
 }
 
 .contact-list {
@@ -19,7 +21,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding: 17px 36px;
     gap: 8px;
 }
 
@@ -32,10 +33,8 @@
 .add-contact-btn {
     display: flex;
     align-items: center;
-    margin-top: 12px;
     padding: 8px 80px;
-    margin-right: auto;
-    margin-left: auto;
+    margin: 0 auto 0 auto;
     gap: 10px;
     cursor: pointer;
     color: white;
@@ -49,6 +48,7 @@
 .add-contact-btn-position {
     position: sticky;
     top: 0px;
+    margin-top: 12px;
 
 }
 
