fix: adjusted position of button

--- a/style/contacts/contact_responsive.css
+++ b/style/contacts/contact_responsive.css
@@ -55,7 +55,7 @@
         margin-right: 12px;
         bottom: 100px;
         left: 630px;
-        margin-right: auto;
+        margin-right: none;
         margin-left: auto;
         margin-top: 20px;
     }
