--- a/style/contacts/contact_responsive.css
+++ b/style/contacts/contact_responsive.css
@@ -1,9 +1,3 @@
-@media (min-width: 1150px) {
-    #responsivMenu {
-        display: none;
-    }
-}
-
 @media (max-width: 1305px) {
     .contact-display {
         margin-left: 25px;
@@ -31,8 +25,12 @@
         width: 100px;
         height: 100px;
     }
+}
 
-
+@media (min-width: 1150px) {
+    #responsivMenu {
+        display: none;
+    }
 }
 
 @media (max-width: 1150px) {
@@ -52,7 +50,6 @@
         flex-direction: column-reverse;
         max-height: 100vh;
         min-width: 320px;
-        
     }
 
     .add-contact-btn-position {
@@ -148,7 +145,6 @@
         min-width: 0;
         margin-top: 80px;
         gap: 28px;
-
     }
 
     .label-responsiv {
@@ -237,6 +233,12 @@
     .sub-menu-btns {
         right: 40px;
     }
+
+    .dialog-message {
+        position: sticky;
+        top: 80%;
+        left: 50%;  
+    }
 }
 
 
@@ -245,7 +247,7 @@
         height: calc(100vh - 168px);
     }
 
-    .sidebar-contacts{
+    .sidebar-contacts {
         height: calc(100vh - 150px);
     }
 }
