--- a/style/legal_privacy_help.css
+++ b/style/legal_privacy_help.css
@@ -11,6 +11,8 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    margin-right: 80px;
+    margin-bottom: 40px;
 }
 
 ol {
@@ -26,4 +28,8 @@ ol ::marker{
 
 .display-in-wide{
     display: flex !important;
+}
+
+.margin-top{
+    margin-top: 20px;
 }
