feat: added active status to privacy policy and legal notice
fix: updated links to policy and legal in other html files

--- a/style/legal_privacy_help.css
+++ b/style/legal_privacy_help.css
@@ -37,3 +37,8 @@ ol ::marker{
 .break-link {
   word-break: break-all;
 }
+
+.sidebar-footer .active{
+    background-color: #091931;
+    padding: 8px 71px;
+}
