--- a/style/board_style.css
+++ b/style/board_style.css
@@ -105,14 +105,18 @@ h1{
 .board_table{
     display: flex;
     gap: 24px;
+    overflow-y: hidden;
+    height: calc(100vh - 400px);
 }
 
 .board_table .column_content{
-    min-height: 500px;
     width: calc(100% / 4);
     margin-top: 8px;
     box-sizing: border-box;
     word-wrap: break-word;
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .no_task_yet{
