fix: various mistakes mentioned by copilot

--- a/style/legal_privacy_help_responsive.css
+++ b/style/legal_privacy_help_responsive.css
@@ -3,7 +3,7 @@
         margin-right: 16px;
     }
 
-    .help-responsiv {
+    .help-responsive {
         height: auto !important;
         min-width: 305px;
     }
