--- a/style/legal_privacy_help.css
+++ b/style/legal_privacy_help.css
@@ -4,7 +4,7 @@
 }
 
 .contact-display a{
-    color:#29ABE2;
+    color: #29ABE2;
 }
 
 .help-content {
@@ -15,13 +15,13 @@
     margin-bottom: 40px;
 }
 
-ol {
+.help-content ol {
     display: flex;
     flex-direction: column;
     gap: 16px;
 }
 
-ol ::marker{
+.help-content ol ::marker {
     font-size: 20px;
     font-weight: bold;
 }
