--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -12,13 +12,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: #2A3647;
     min-height: 100vh;
     z-index: 30;
     font-weight: 400;
     font-size: 16px;
     line-height: 120%;
     min-width: 232px;
+    max-height: 100vh;
+    background-color: #2A3647;
 }
 
 .body {
@@ -136,4 +137,8 @@ article {
 
 .white {
     color: #ffffff;
+}
+
+.background-color-height {
+    background-color: #2A3647;
 }
