--- a/style/board_style.css
+++ b/style/board_style.css
@@ -288,7 +288,7 @@ h1{
 
 .responseToastContent{
     box-sizing: border-box;
-    transform: translateX(200%);
+    transform: translateY(200vh);
     transition: opacity 0.5s ease-in-out, transform 0.3s ease-in-out;
     opacity: 0;
     z-index: 1001;
@@ -307,5 +307,5 @@ h1{
 
 .responseToastContent.show {
     opacity: 1;
-    transform: translateX(0);
+    transform: translateY(0);
 }
