fixed issues by copilot

--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -135,10 +135,10 @@ article {
     background-color: #091931;
 }
 
-.white {
+.white-writing {
     color: #ffffff;
 }
 
-.background-color-height {
+.sidebar-background-color {
     background-color: #2A3647;
 }
