--- a/style/summary_login/summary.css
+++ b/style/summary_login/summary.css
@@ -12,6 +12,10 @@
     height: 130px;
 }
 
+.summary-padding-top{
+    padding-top: 110px;
+}
+
 .summary-greeting-section {
     display: flex;
     flex-direction: column;
