--- a/style/summary_login/summary.css
+++ b/style/summary_login/summary.css
@@ -2,10 +2,15 @@
     display: flex;
     gap: 120px;
     align-items: flex-start;
+    margin-top: 30px;
 }
 
-.summary-padding-top{
+.summary-padding-top {
     padding-top: 110px;
+}
+
+.summary-container-height {
+    height: 168px;
 }
 
 .summary-greeting-section {
@@ -13,7 +18,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    height: 168px;
+
     margin-top: 190px;
 }
 
@@ -24,7 +29,7 @@
 .summary-cards-wrapper {
     display: flex;
     flex-direction: column;
-    gap: 32px;
+    gap: 20px;
     flex-shrink: 0;
 }
 
@@ -38,7 +43,7 @@
 .summary-stat-card {
     background: #ffffff;
     border-radius: 30px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.08);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
 }
 
 .summary-card-icon {
@@ -70,7 +75,7 @@
 
 .todo-card {
     width: 264px;
-    height: 168px;
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -78,7 +83,7 @@
     padding: 38px 19px;
     background: #FFFFFF;
     border-radius: 30px;
-    box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .todo-icon {
@@ -118,7 +123,7 @@
 
 .done-card {
     width: 264px;
-    height: 168px;
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -126,7 +131,7 @@
     padding: 38px 19px;
     background: #FFFFFF;
     border-radius: 30px;
-    box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .done-icon {
@@ -167,14 +172,14 @@
 
 .urgent-card {
     width: 560px;
-    height: 168px;
+
     display: flex;
     align-items: center;
     gap: 61px;
     padding: 28px 48px;
     background: #FFFFFF;
     border-radius: 30px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .urgent-left {
@@ -273,10 +278,10 @@
 
 .board-card {
     width: 168px;
-    height: 168px;
+
     background: #FFFFFF;
     border-radius: 30px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -316,10 +321,10 @@
 
 .progress-card {
     width: 168px;
-    height: 168px;
+
     background: #FFFFFF;
     border-radius: 30px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -359,10 +364,10 @@
 
 .feedback-card {
     width: 168px;
-    height: 168px;
+
     background: #FFFFFF;
     border-radius: 30px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: center;
     align-items: center;
